# hseProjectQT-1

./: .gitignore  Documentation.pptx
untitled5/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  generate_plot.py  graphs.cpp  graphs.h  graphs.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  players.h  structure_player.h  tables.cpp  tables.h  tables.ui
